Modification de build.gradle